libs/wingc/src/lsp/snapshots/hovers/class_symbol_in_closure.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\ninflight myClass: MyClass\nclass MyClass\n```\n---"
range:
  start:
    line: 4
    character: 6
  end:
    line: 4
    character: 13

