libs/wingc/src/lsp/snapshots/hovers/enum_doc.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nenum Foo\n```\n---\n Enum doc"
range:
  start:
    line: 2
    character: 7
  end:
    line: 2
    character: 10

