libs/wingc/src/lsp/snapshots/hovers/enum_variant_doc.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nenum Foo {\n  A,\n}\n```"
range:
  start:
    line: 5
    character: 5
  end:
    line: 5
    character: 6

