libs/wingc/src/lsp/snapshots/hovers/inflight_ctor_doc_from_new_expr.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\ninflight new(): Bob\n```\n---\n I'm bob the constructor (inflight)"
range:
  start:
    line: 5
    character: 23
  end:
    line: 5
    character: 26

