libs/wingc/src/lsp/snapshots/hovers/inflight_init.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nstruct Data\n```\n---\n### Fields\n- `field` — str"
range:
  start:
    line: 11
    character: 2
  end:
    line: 11
    character: 6

