libs/wingc/src/lsp/snapshots/hovers/inherited_interface_method_doc.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\npreflight do: preflight (): void\n```\n---\n Parent interface method doc"
range:
  start:
    line: 9
    character: 6
  end:
    line: 9
    character: 8

