libs/wingc/src/lsp/snapshots/hovers/inherited_struct_field_doc.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nfield: num\n```\n---\n Parent struct field doc"
range:
  start:
    line: 9
    character: 8
  end:
    line: 9
    character: 13

