libs/wingc/src/lsp/snapshots/hovers/inside_class.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nhello: num\n```\n---\n```wing\nnum\n```"
range:
  start:
    line: 3
    character: 8
  end:
    line: 3
    character: 13

